--- a/dashboard.html
+++ b/dashboard.html
@@ -1,1 +1,15 @@
-<!DOCTYPE html><html><head><title>Dashboard</title></head><body><h2>Dashboard Overview</h2></body></html>
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Dashboard</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+  <h1>Dashboard Overview</h1>
+  <div class="card">Annex Coolant - Daily Orders: 25 | Returns: 3 | Profit: 5400 BDT</div>
+  <div class="card">Annex Fuel - Daily Orders: 15 | Returns: 2 | Profit: 4200 BDT</div>
+</body>
+</html>
