--- a/login.html
+++ b/login.html
@@ -4,31 +4,19 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Tassnex Login</title>
+  <title>Login</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <div class="login-container">
     <img src="logo.png" alt="Tassnex Logo" class="logo" />
     <h2>Login to your account</h2>
-    
-    <form class="login-form">
+    <form id="loginForm">
       <input type="text" id="username" placeholder="Username" required /><br>
-      
-      <div class="password-wrapper">
-        <input type="password" id="password" placeholder="Password" required />
-        <span id="togglePassword" style="cursor: pointer;">👁️</span>
-      </div>
-
-      <div class="options">
-        <label><input type="checkbox"> Remember me</label>
-        <a href="#">Forgot password?</a>
-      </div>
-
+      <input type="password" id="password" placeholder="Password" required /><br>
       <button type="submit">Login</button>
     </form>
   </div>
-
   <script src="app.js"></script>
 </body>
 </html>
